--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "todo-list",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kriss-tinkaa.github.io/todo-list-react",
+  "homepage": "https://kriss-tinkaa.github.io/Todo-npm list-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
